// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DraggableSplitscreen renders a text-based element 1`] = `
<div
  className="sc-AxjAm gndcwd"
>
  <div
    className="sc-AxhCb bYAasw"
  >
    <div
      style={
        Object {
          "backgroundColor": "blue",
          "padding": "6rem",
        }
      }
    >
      <h2>
        Left side
      </h2>
    </div>
  </div>
  <div
    className="sc-AxiKw haJeYw"
    style={
      Object {
        "clipPath": "inset(0 0 0 calc(50% + 0px))",
      }
    }
  >
    <div
      style={
        Object {
          "backgroundColor": "red",
          "padding": "6rem",
          "textAlign": "right",
        }
      }
    >
      <h2>
        Right side
      </h2>
    </div>
  </div>
  <div
    className="sc-AxirZ cHTZsB react-draggable"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    style={
      Object {
        "transform": "translate(0px,0px)",
      }
    }
    transform={null}
  />
</div>
`;

exports[`DraggableSplitscreen renders a video-based element 1`] = `
<div
  className="sc-AxjAm gndcwd"
>
  <div
    className="sc-AxhCb bYAasw"
  >
    <video
      autoPlay={true}
      loop={true}
      muted={true}
      src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
      style={
        Object {
          "height": "auto",
          "objectFit": "inherit",
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="sc-AxiKw haJeYw"
    style={
      Object {
        "clipPath": "inset(0 0 0 calc(50% + 0px))",
      }
    }
  >
    <video
      autoPlay={true}
      loop={true}
      muted={true}
      src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4"
      style={
        Object {
          "height": "auto",
          "objectFit": "inherit",
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="sc-AxirZ cHTZsB react-draggable"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    style={
      Object {
        "transform": "translate(0px,0px)",
      }
    }
    transform={null}
  />
</div>
`;

exports[`DraggableSplitscreen renders an image-based element. 1`] = `
<div
  className="sc-AxjAm gndcwd"
>
  <div
    className="sc-AxhCb bYAasw"
  >
    <img
      alt="Left Side"
      src="mock-file"
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="sc-AxiKw haJeYw"
    style={
      Object {
        "clipPath": "inset(0 0 0 calc(50% + 0px))",
      }
    }
  >
    <img
      alt="Right Side"
      src="mock-file"
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="sc-AxirZ cHTZsB react-draggable"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    style={
      Object {
        "transform": "translate(0px,0px)",
      }
    }
    transform={null}
  />
</div>
`;
